put scroll inside skybox

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+* {
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
   margin: 0;
-  height: 100vh;
-  background: #bdc3c7;
+  padding: 0;
 }
 
 @tailwind base;
